--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "^8.1",
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "vormkracht10/laravel-mails": "dev-feature/suppressions-list"
+        "vormkracht10/laravel-mails": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
